Abstract hidden HTML to CSS

--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -6939,3 +6939,9 @@ article.has-post-thumbnail .entry-title {
 		clear: none;
 	}
 }
+
+/* Jaime Caballero's changes - jaicab.com */
+.btn.menupopup_btn,
+.menu-item-138 {
+	display: none;
+}
