--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -324,6 +324,9 @@ input[type=number]::-webkit-outer-spin-button {
 	margin-bottom: 0;
 	text-transform: capitalize;
 }
+.bottom-footer a {
+	color: #fff;
+}
 
 /* ## Footer */
 
