Fix about image

--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -7010,9 +7010,9 @@ article.has-post-thumbnail .entry-title {
 
 /* Reservas link */
 .menu-item-157 a {
-	font-weight: 800 !important;
+	font-weight: 500 !important;
 	letter-spacing: 1px !important;
-	background: #af672c !important;
+	background: #c59d5f !important;
 	display: inline-block !important;
 	padding: 0.66em 1em !important;
 	color: white !important;
